devops/argocd/manifests/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/limit-connections: "1"
    nginx.ingress.kubernetes.io/limit-rpm: "60"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "3"
    nginx.ingress.kubernetes.io/limit-by: "binary_remote_addr"
    nginx.ingress.kubernetes.io/limit-req-status: "429"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - nginx.prod.base-sepolia.intuition.sh
    secretName: nginx-prod-base-sepolia-cert
  rules:
    - host: nginx.prod.base-sepolia.intuition.sh
      http:
        paths:
          - path: /v1/graphql
            pathType: Prefix
            backend:
              service:
                name: prod-base-sepolia-v-1-5-vector-graphql-engine
                port:
                  number: 8080
